--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -14,6 +14,7 @@ easy_admin:
                 fields:
                     - author
                     - { property: 'email', type: 'email' }
+                    - { property: 'photoFilename', type: 'image', 'base_path':"/uploads/photos", label: 'Photo' }
                     - { property: 'createAt', type: 'datetime' }
                 sort: ['createAt', 'ASC']
                 filters: ['conference']
