Применение фикстур (тестирование API) Загрузите данные из фикстур в базу данных. Помните, что это действие удалит все записи в базе данных (если вы не хотите этого, ничего не делайте и перейдите к следующему разделу).
$ symfony console doctrine:fixtures:load

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /.env.local.php
 /.env.*.local
 /config/secrets/dev
+/config/secrets/test
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
