--- a/.env
+++ b/.env
@@ -25,5 +25,6 @@ APP_SECRET=c36ce1c18dfa6a047abc7ec5475a8c88
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=postgresql://127.0.0.1:5432/db?serverVersion=11&charset=utf8
+#DATABASE_URL=postgresql://127.0.0.1:5432/db?serverVersion=11&charset=utf8
 ###< doctrine/doctrine-bundle ###
+DATABASE_URL=postgres://postgres:postgres@127.0.0.1:5432/test?sslmode=disable&charset=utf8
