--- a/.env
+++ b/.env
@@ -28,3 +28,10 @@ APP_SECRET=c36ce1c18dfa6a047abc7ec5475a8c88
 #DATABASE_URL=postgresql://127.0.0.1:5432/db?serverVersion=11&charset=utf8
 ###< doctrine/doctrine-bundle ###
 DATABASE_URL=postgres://postgres:postgres@127.0.0.1:5432/test?sslmode=disable&charset=utf8
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
