--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "api-platform/api-pack": "^1.2",
         "easycorp/easyadmin-bundle": "^2.3",
         "imagine/imagine": "^1.2",
         "sensio/framework-extra-bundle": "^5.5",
@@ -16,6 +17,7 @@
         "symfony/mailer": "5.0.*",
         "symfony/messenger": "5.0.*",
         "symfony/monolog-bundle": "^3.5",
+        "symfony/notifier": "5.0.*",
         "symfony/orm-pack": "^1.0",
         "symfony/process": "5.0.*",
         "symfony/security-bundle": "5.0.*",
