--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/security-bundle": "5.0.*",
         "symfony/string": "5.0.*",
         "symfony/test-pack": "^1.0",
+        "symfony/translation": "5.0.*",
         "symfony/twig-pack": "^1.0",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/workflow": "5.0.*",
@@ -30,6 +31,7 @@
         "twig/cssinliner-extra": "^3.0",
         "twig/inky-extra": "^3.0",
         "twig/intl-extra": "^3.0",
+        "twig/string-extra": "^3.0",
         "webonyx/graphql-php": "^0.13.8"
     },
     "require-dev": {
