--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,7 +7,7 @@ parameters:
     default_admin_email: admin@example.co
     default_domain: '127.0.0.1'
     default_scheme: 'http'
-    #app.supported_locales: 'ru|en|fr'
+    app.supported_locales: 'ru|en'
 
     router.request_context.host: '%env(default:default_domain:SYMFONY_DEFAULT_ROUTE_HOST)%'
     router.request_context.scheme: '%env(default:default_scheme:SYMFONY_DEFAULT_ROUTE_SCHEME)%'
